--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Garima Bhayana</title>
+    <style> 
+      background: rgb(255,0,0);
+    </style>
   </head>
   <body>
     <div id='root'> </div>
